--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,6 +7,17 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <style>
+    /* Hide the scrollbar */
+    html {
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none; /* For Internet Explorer and Edge */
+    }
+
+    html::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Edge */
+    }
+
+
     .brand-header {
         background: #fff;
         padding: 15px 30px;
