change header title to logo

--- a/views/partials/admin-header.ejs
+++ b/views/partials/admin-header.ejs
@@ -14,7 +14,9 @@
 
 <header class="brand-header">
     <div class="d-flex justify-content-between align-items-center">
-        <h1 class="brand-title">HotSpring Admin</h1>
+        <div class="">
+            <img src="https://hotspringenzymebath.com/cdn/shop/files/logo3_x120@2x.png" alt="HotSpring" class="img-fluid" style="max-height: 100px; object-fit: contain;">
+        </div>
         <nav>
             <a href="/<%= ADMIN_PATH %>/dashboard" class="custom-link me-2">Dashboard</a>
             <a href="/<%= ADMIN_PATH %>/config" class="custom-link me-2">Configuration</a>
