--- a/views/rate.ejs
+++ b/views/rate.ejs
@@ -184,9 +184,9 @@
     </style>
 </head>
 <body>
-    <header class="brand-header py-3 mb-4">
+    <header class="brand-header py-0 mb-4">
         <div class="">
-            <h1 class="h3 mb-0 text-primary fw-bold">HotSpring</h1>
+            <img src="https://hotspringenzymebath.com/cdn/shop/files/logo3_x120@2x.png" alt="HotSpring" class="img-fluid" style="max-height: 100px; object-fit: contain;">
         </div>
     </header>
     <div class="container">
